book2-3 update